# cargo-dockerfile

./: Cargo.toml  LICENSE.md  README.md
examples/: basic-multistage.Dockerfile  basic.Dockerfile
examples/basic/: Cargo.toml
src/: cli.rs  constants.rs  dockerfile.rs  main.rs  predicates.rs
