[package]
name = "cargo-dockerfile"
version = "0.1.0"
edition = "2021"
authors = ["George Liontos <sdi1600094@di.uoa.gr>"]
readme = "README.md"
categories = ["command-line-utilities"]
exclude = ["build/**/*.o", "doc/**/*.html"]
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/GeorgeLS/cargo-dockerfile"
description = """
cargo dockerfile is a cargo plugin for generating Dockerfiles out of your Rust project
"""
license = "GPL-2.0"

[dependencies]
walkdir = "2.5.0"
cargo_toml = "0.20.4"
anyhow = "1.0.89"
whoami = "1.5.2"
clap = { version = "4.5.18", features = ["derive"]}
