[package]
name = "cargo-dockerfile"
version = "0.1.0"
edition = "2021"
authors = ["George Liontos <sdi1600094@di.uoa.gr>"]
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cargo", "docker", "dockerfile", "generator"]
exclude = ["build/**/*.o", "doc/**/*.html"]
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/GeorgeLS/cargo-dockerfile"
description = """
cargo dockerfile is a cargo plugin for generating Dockerfiles out of your Rust project
"""
license = "GPL-2.0"

[dependencies]
walkdir = "2.5.0"
cargo_toml = "0.22.1"
anyhow = "1.0.98"
whoami = "1.6.0"
clap = { version = "4.5.40", features = ["derive"]}

[lints.clippy]
cargo = "allow"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
restriction = "allow"
style = "deny"
suspicious = "deny"
